--- a/app/src/main/res/layout/activity_attribute_setter.xml
+++ b/app/src/main/res/layout/activity_attribute_setter.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -29,6 +28,18 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:imageUrl="@{url}"/>
+
+        <ImageView
+            android:id="@+id/img_click"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:imageUrl="@{url}"/>
+
+        <com.brotherd.databinddemo.widget.MyImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="16dp"
             app:imageUrl="@{url}"/>
 
     </LinearLayout>
