--- a/app/src/main/res/layout/include_stub.xml
+++ b/app/src/main/res/layout/include_stub.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+
+        <variable
+            name="user"
+            type="com.brotherd.databinddemo.model.User"/>
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -9,7 +16,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:text="i am a TextView in ViewStub"/>
+            android:text="@{user.firstName}"/>
 
     </LinearLayout>
 </layout>
